[SL-001] Added signin, signup, navabr, header, footer components with singin and sign up routing

--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -1,1 +1,13 @@
-<p>main works!</p>
+<app-navbar></app-navbar>
+
+<div class="container text-center mt-5">
+  <h1 class="display-4 mb-3">Welcome to Login Starter</h1>
+  <p class="lead mb-4">This is a demo app showing role-based login using Angular 17</p>
+
+  <div class="d-flex justify-content-center gap-3 flex-wrap">
+    <a routerLink="/auth/signin" class="btn btn-primary px-4">Sign In</a>
+    <a routerLink="/auth/signup" class="btn btn-outline-primary px-4">Sign Up</a>
+  </div>
+</div>
+
+<app-footer></app-footer>
